reg loss bug fix (its still broken though)

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -1078,6 +1078,89 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1D Tensor Softmax: tensor([0.0900, 0.2447, 0.6652])\n",
+      "2D Tensor Row-wise Softmax:\n",
+      " tensor([[0.0900, 0.2447, 0.6652],\n",
+      "        [0.0900, 0.2447, 0.6652]])\n",
+      "2D Tensor Column-wise Softmax:\n",
+      " tensor([[0.0474, 0.0474, 0.0474],\n",
+      "        [0.9526, 0.9526, 0.9526]])\n",
+      "3D Tensor Softmax (dim=0):\n",
+      " tensor([[[0.0180, 0.0180],\n",
+      "         [0.0180, 0.0180]],\n",
+      "\n",
+      "        [[0.9820, 0.9820],\n",
+      "         [0.9820, 0.9820]]])\n",
+      "3D Tensor Softmax (dim=1):\n",
+      " tensor([[[0.1192, 0.1192],\n",
+      "         [0.8808, 0.8808]],\n",
+      "\n",
+      "        [[0.1192, 0.1192],\n",
+      "         [0.8808, 0.8808]]])\n",
+      "3D Tensor Softmax (dim=2):\n",
+      " tensor([[[0.2689, 0.7311],\n",
+      "         [0.2689, 0.7311]],\n",
+      "\n",
+      "        [[0.2689, 0.7311],\n",
+      "         [0.2689, 0.7311]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 1: 1D tensor\n",
+    "v1 = torch.tensor([1, 2, 3], dtype=torch.float32)\n",
+    "softmax_v1 = torch.softmax(v1, dim=0)  # Compute softmax across the single dimension\n",
+    "print(\"1D Tensor Softmax:\", softmax_v1)\n",
+    "\n",
+    "# Example 2: 2D tensor (row-wise softmax)\n",
+    "v2 = torch.tensor([[1, 2, 3], [4, 5, 6]], dtype=torch.float32)\n",
+    "softmax_v2_row = torch.softmax(v2, dim=1)  # Compute softmax across rows\n",
+    "print(\"2D Tensor Row-wise Softmax:\\n\", softmax_v2_row)\n",
+    "\n",
+    "# Example 3: 2D tensor (column-wise softmax)\n",
+    "softmax_v2_col = torch.softmax(v2, dim=0)  # Compute softmax across columns\n",
+    "print(\"2D Tensor Column-wise Softmax:\\n\", softmax_v2_col)\n",
+    "\n",
+    "# Example 4: Higher dimensional tensor\n",
+    "v3 = torch.tensor([[[1, 2], [3, 4]], [[5, 6], [7, 8]]], dtype=torch.float32)\n",
+    "softmax_v3_dim0 = torch.softmax(v3, dim=0)  # Softmax across the 0th dimension\n",
+    "softmax_v3_dim1 = torch.softmax(v3, dim=1)  # Softmax across the 1st dimension\n",
+    "softmax_v3_dim2 = torch.softmax(v3, dim=2)  # Softmax across the 2nd dimension\n",
+    "print(\"3D Tensor Softmax (dim=0):\\n\", softmax_v3_dim0)\n",
+    "print(\"3D Tensor Softmax (dim=1):\\n\", softmax_v3_dim1)\n",
+    "print(\"3D Tensor Softmax (dim=2):\\n\", softmax_v3_dim2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
