reorg causalsent, setup civilcomments exp

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -1,6 +1,54 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EDA of IMDB Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np \n",
+    "import datasets\n",
+    "\n",
+    "def load_imdb_data():"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CAUSALIGN_DIR = os.path.dirname(os.path.dirname(os.path.abspath(\"__file__\")))\n",
+    "CAUSALSENT_DIR = os.path.dirname(os.path.dirname(os.path.abspath(\"__file__\")))\n",
     "ACL_DATA_DIR = 'acl_data'"
    ]
   },
@@ -34,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TOP_DIR = CAUSALIGN_DIR\n",
+    "TOP_DIR = CAUSALSENT_DIR\n",
     "df_cit = pd.read_parquet(os.path.join(TOP_DIR, ACL_DATA_DIR, 'acl_full_citations.parquet'))\n",
     "df_pub = pd.read_parquet(os.path.join(TOP_DIR, ACL_DATA_DIR, 'acl-publication-info.74k.v2.parquet'))"
    ]
