--- a/notebooks/similarity.ipynb
+++ b/notebooks/similarity.ipynb
@@ -6,13 +6,13 @@
    "source": [
     "# Experiments \n",
     "\n",
-    "Experimenting with training/inference using the `causalign` package. Currently in use for testing \n",
+    "Experimenting with training/inference using the `causalsent` package. Currently in use for testing \n",
     "package implementations/ debugging. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
     "print(\"TOP_DIR:\", TOP_DIR)\n",
     "if TOP_DIR not in sys.path:\n",
     "    sys.path.insert(0, TOP_DIR)\n",
-    "from causalign.modules.bansal_bert_pretrained import MSMarcoBERTModel\n",
+    "from causalsent.modules.bansal_bert_pretrained import MSMarcoBERTModel\n",
     "from transformers import AutoTokenizer\n",
     "import torch"
    ]
