--- a/notebooks/visualize_gridsearch.ipynb
+++ b/notebooks/visualize_gridsearch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -23,8 +23,8 @@
     "TOP_DIR = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
     "if TOP_DIR not in sys.path:\n",
     "    sys.path.insert(0, TOP_DIR)\n",
-    "from causalign.data import visualize\n",
-    "DB_PATH = os.path.abspath(os.path.join(os.getcwd(), \"..\", \"causalign\", \"out\", \"experiments.db\"))\n",
+    "from causalsent.data import visualize\n",
+    "DB_PATH = os.path.abspath(os.path.join(os.getcwd(), \"..\", \"causalsent\", \"out\", \"experiments.db\"))\n",
     "print(f\"Database path: {DB_PATH}\")"
    ]
   },
