final quick stuffs for report

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -20,11 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np \n",
-    "import datasets\n",
-    "\n",
-    "def load_imdb_data():"
+    "#nvm did in sentiment.ipynb"
    ]
   },
   {
